[package]
name = "login-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.152"
tokio-postgres = "0.7.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = {version="1.7.1", features=["std"]}
